# model-workbench

./: .envrc  .envrc.example  .gitignore  .sops.yaml  CLAUDE.md  Makefile  README.txt  main.py  pyproject.nightly.toml  pyproject.toml
benchmarks/: 2025-12-09__home_peter_models_openai_gpt-oss-120b_vllm-server_text-only.json  2025-12-09_openai_gpt-oss-120b_vllm-server_text-only.json  2025-12-09_unsloth_Qwen3-0.6B-UD-Q4_K_XL.json
config/: models.yaml  nightly.toml
docker/: Dockerfile.awq  Dockerfile.compressor  Dockerfile.exl  Dockerfile.ik_llama  Dockerfile.ktransformers  Dockerfile.llama  Dockerfile.mlx  Dockerfile.modelopt  Dockerfile.sglang  Dockerfile.vllm  Dockerfile.vllm-ct
docs/: TODO_BENCH_INVESTIGATION.md  TODO_EVALS.md  TODO_KTRANSFORMERS.md  TODO_LITELLM.md  TODO_MLX_CUDA.md  TODO_REFACTOR.md  troubleshooting.md
evals/: 2025-12-09_unsloth_Qwen3-0.6B-GGUF_ifeval-gsm8k.json
nightly/: pyproject.toml  readme.txt
perf/: 2025-12-09_Qwen_Qwen3-Omni-30B-A3B-Instruct_vllm-server_text-only.json  2025-12-09_Qwen_Qwen3-VL-8B-Instruct-FP8_vllm-server_vision.json  2025-12-09_allenai_Olmo-3-32B-Think_vllm-server_text-only.json  2025-12-09_allenai_Olmo-3-7B-Think_vllm-server_text-only.json  2025-12-09_bartowski_cerebras_MiniMax-M2-REAP-172B-A10B-GGUF_cerebras_MiniMax-M2-REAP-172B-A10B-IQ4_XS_llama-server_text-only.json  2025-12-09_bartowski_mistralai_Devstral-Small-2-24B-Instruct-2512-GGUF_mistralai_Devstral-Small-2-24B-Instruct-2512-Q4_K_L_llama-server_text-only.json  2025-12-09_mistralai_Devstral-2-123B-Instruct-2512_vllm-server_text-only.json  2025-12-09_mistralai_Devstral-Small-2-24B-Instruct-2512_vllm-server.json  2025-12-09_mistralai_Devstral-Small-2-24B-Instruct-2512_vllm-server_text-only.json  2025-12-09_mistralai_Devstral-Small-2-24B-bf16_devstral-small-2-24b-bf16-q4_k_m_llama-server_text-only.json  2025-12-09_openai_gpt-oss-120b_vllm-server_text-only.json  2025-12-09_openai_gpt-oss-20b_vllm-server_text-only.json  2025-12-09_unsloth_GLM-4.6-GGUF_IQ4_XS.json  2025-12-09_unsloth_GLM-4.6-GGUF_IQ4_XS_llama-server_text-only.json  2025-12-09_unsloth_GLM-4.6-GGUF_UD-Q3_K_XL_llama-server_text-only.json  2025-12-09_unsloth_GLM-4.6-GGUF_llama-server_text-only.json  2025-12-09_unsloth_GLM-4.6-REAP-268B-A32B-GGUF_UD-Q4_K_XL.json  2025-12-09_unsloth_GLM-4.6-REAP-268B-A32B-GGUF_UD-Q4_K_XL_llama-server_text-only.json  2025-12-09_unsloth_GLM-4.6-REAP-268B-A32B-GGUF_llama-server_text-only.json  2025-12-09_unsloth_MiniMax-M2-GGUF_UD-Q4_K_XL.json  2025-12-09_unsloth_MiniMax-M2-GGUF_UD-Q4_K_XL_llama-server_text-only.json  2025-12-09_unsloth_MiniMax-M2-GGUF_UD-Q5_K_XL_llama-server_text-only.json  2025-12-09_unsloth_MiniMax-M2-GGUF_llama-server_text-only.json  2025-12-09_unsloth_Olmo-3-32B-Think-GGUF_llama-server_text-only.json  2025-12-09_unsloth_Olmo-3-32B-Think-UD-Q4_K_XL.json  2025-12-09_unsloth_Qwen3-0.6B-GGUF_Qwen3-0.6B-UD-Q4_K_XL_llama-server_text-only.json  2025-12-09_unsloth_Qwen3-0.6B-GGUF_Qwen3-0.6B-UD-Q6_K_XL_llama-server_text-only.json  2025-12-09_unsloth_Qwen3-0.6B-GGUF_llama-server_text-only.json  2025-12-09_unsloth_Qwen3-0.6B-UD-Q4_K_XL.json  2025-12-09_unsloth_Qwen3-VL-235B-A22B-Instruct-GGUF_UD-Q4_K_XL.json  2025-12-09_unsloth_Qwen3-VL-235B-A22B-Instruct-GGUF_UD-Q4_K_XL_llama-server_text-only.json  2025-12-09_unsloth_Qwen3-VL-235B-A22B-Instruct-GGUF_UD-Q4_K_XL_llama-server_vision.json  2025-12-09_unsloth_Qwen3-VL-235B-A22B-Instruct-GGUF_llama-server_text-only.json  2025-12-09_unsloth_gpt-oss-120b-F16.json  2025-12-09_unsloth_gpt-oss-120b-GGUF_gpt-oss-120b-F16_llama-server_text-only.json  2025-12-09_unsloth_gpt-oss-120b-GGUF_llama-server_text-only.json  2025-12-09_unsloth_gpt-oss-20b-F16.json  2025-12-09_unsloth_gpt-oss-20b-GGUF_llama-server_text-only.json  2025-12-09_zai-org_GLM-4.6V-FP8_vllm-server.json  2025-12-09_zai-org_GLM-4.6V-FP8_vllm-server_text-only.json  (+47 more)
prompts/: __init__.py  secret.py  secret.yaml
remote/: .env.example  .gitignore  .terraform.lock.hcl  README.md  docker-compose.yml  local-prometheus-remote-write.yaml  main.tf  outputs.tf  (+3 more)
(+92 files in other folders)
