# Nightly variant for models requiring latest transformers/tokenizers
# Creates .venv in this directory (nightly/.venv)
#
# Models that need this: GLM-4.6V, and any other bleeding-edge models
# Mark models with `nightly: true` in models.yaml to use this environment

[project]
name = "model-workbench-nightly"
version = "0.1.0"
description = "Nightly deps variant"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "compressed-tensors>=0.9.0",  # Required for FP8 quantized models
    "fastapi==0.123.0",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=0.36.0",
    "mistral-common>=1.8.6",
    "openai>=1.0.0",  # For server benchmarking
    "pillow>=10.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "transformers>=4.50.0",
    "uvicorn>=0.38.0",
    "vllm>=0.12.0",
]

[tool.uv]
override-dependencies = [
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "tokenizers @ git+https://github.com/huggingface/tokenizers.git#subdirectory=bindings/python",
]
